<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txtF"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginBottom="95dp"
        android:ems="10"
        android:hint="@string/symbolF"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/vKM"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtC"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="95dp"
        android:ems="10"
        android:hint="@string/symbolC"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/vM"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/txtKM"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginBottom="80dp"
        android:ems="10"
        android:hint="@string/symbolKM"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/vKG"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtM"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="80dp"
        android:ems="10"
        android:hint="@string/symbolM"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/vLB"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/txtKG"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:ems="10"
        android:hint="@string/symbolKG"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/vL"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtLB"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="80dp"
        android:ems="10"
        android:hint="@string/symbolLB"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/vG"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/txtL"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginBottom="100dp"
        android:ems="10"
        android:hint="@string/symbolL"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtG"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="100dp"
        android:ems="10"
        android:hint="@string/symbolG"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/vF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="1dp"
        android:text="@string/fahrenheit"
        app:layout_constraintBottom_toTopOf="@+id/txtF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/vC"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="102dp"
        android:layout_marginRight="102dp"
        android:layout_marginBottom="1dp"
        android:text="@string/celsius"
        app:layout_constraintBottom_toTopOf="@+id/txtC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/vKM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginBottom="1dp"
        android:text="@string/kilometer"
        app:layout_constraintBottom_toTopOf="@+id/txtKM"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/vM"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="167dp"
        android:layout_marginLeft="167dp"
        android:layout_marginEnd="122dp"
        android:layout_marginRight="122dp"
        android:layout_marginBottom="1dp"
        android:text="@string/miles"
        app:layout_constraintBottom_toTopOf="@+id/txtM"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/vKM" />

    <TextView
        android:id="@+id/vLB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginLeft="172dp"
        android:layout_marginEnd="163dp"
        android:layout_marginRight="163dp"
        android:layout_marginBottom="1dp"
        android:text="@string/lbs"
        app:layout_constraintBottom_toTopOf="@+id/txtLB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/vKG" />

    <TextView
        android:id="@+id/vL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginBottom="1dp"
        android:text="@string/litre"
        app:layout_constraintBottom_toTopOf="@+id/txtL"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/vG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="198dp"
        android:layout_marginLeft="198dp"
        android:layout_marginEnd="142dp"
        android:layout_marginRight="142dp"
        android:layout_marginBottom="1dp"
        android:text="@string/gallon"
        app:layout_constraintBottom_toTopOf="@+id/txtG"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/vL" />

    <TextView
        android:id="@+id/vKG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginBottom="1dp"
        android:text="@string/kilogram"
        app:layout_constraintBottom_toTopOf="@+id/txtKG"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>